<resources>
    <string name="app_name">Servicios App</string>
    <string name="transferirET">Transferencia exitosa %s, con número de cuenta %s, envío la cantidad de %s Lempiras, a %s con número de identidad %s y número de cuenta %s</string>
    <string name="logo">Logo</string>
    <string name="btnEnee">ENEE</string>
    <string name="btnSanaa">SANAA</string>
    <string name="btnTigo">TIGO</string>
    <string name="btnClaro">CLARO</string>
    <string name="btnRetiro">RETIRAR</string>
    <string name="btnTransferir">TRANSFERIR</string>
    <string name="logo_tigo">LOGO</string>
    <string name="retroceder">RETROCESO</string>
    <string name="numero">Ingrese su número</string>
    <string name="monto">Ingrese el monto</string>
    <string name="btnComprar">COMPRAR</string>
    <string name="txtNombre">Ingrese nombre </string>
    <string name="txtCuenta">Ingrese cuenta origen</string>
    <string name="txtdestino">Ingrese cuenta destino</string>
    <string name="txtIdentidad">Identidad destinatario</string>
    <string name="txtdestinatario">Nombre del destinatario</string>
    <string name="txtTransferir">Tranferir</string>
    <string name="txtCodigo">Ingrese su código</string>
    <string name="txtDireccion">Ingrese su dirección</string>
    <string name="txtFecha">Ingrese la fecha </string>
    <string name="txtTotal">Ingrese el total a pagar</string>
    <string name="txtTipo">Recarga/SuperRecarga</string>
    <string name="txtEnviar">ENVIAR</string>
    <string name="txtRetirarDinero">Retirar</string>
    <string name="txtCuenta1">Ingrese su cuenta </string>
    <string name="txtMonto2">Ingrese el monto </string>
    <string name="txtRetirar">RETIRAR</string>
    <string name="pagoExitoso">Pago exitoso, %S con codigo %S, direccion %s, pago el total %s en Lempiras, la fecha de %S.</string>
    <string name="Recarga">Envió exitoso de %S al numero %s por el valor de %s</string>
    <string name="Retiro">Retiro exitoso de Lps.  %S de la cuenta: %s</string>
    <string name="todo"></string>

</resources>