<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_banco"
    tools:context=".TransferirActivity">

    <ImageView
        android:id="@+id/logo_banco"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/logo_tigo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/transferencia" />

    <ImageView
        android:id="@+id/retroceder2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/retroceder"
        android:onClick="menuPrincipal"
        android:rotation="180"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/retroceder" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:backgroundTint="#fff"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/txtNombre"
        android:inputType="textPersonName"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txtCuenta"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/txtCuenta"
        android:inputType="number"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtMonto"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="510dp"
        android:backgroundTint="#fff"
        android:ems="10"
        android:hint="@string/monto"
        android:inputType="number"
        android:textColorHint="#fff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/txtTransferir"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/btntransferir"
        android:fontFamily="@font/eb_garamond"
        android:gravity="center"
        android:text="@string/btnTransferir"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>