<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InicioAppActivity"
    android:background="@drawable/fondo_principal">

        <TextView
            android:id="@+id/btnTransferir"
            android:layout_width="320dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/botones"
            android:fontFamily="@font/eb_garamond"
            android:gravity="center"
            android:onClick="abrirTransferir"
            android:text="@string/btnTransferir"
            android:textColor="#fff"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRetiro" />

        <TextView
            android:id="@+id/btnTigo"
            android:layout_width="320dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/botones"
            android:fontFamily="@font/eb_garamond"
            android:gravity="center"
            android:onClick="abrirTigo"
            android:text="@string/btnTigo"
            android:textColor="#fff"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSanaa" />

        <TextView
            android:id="@+id/btnClaro"
            android:layout_width="320dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/botones"
            android:fontFamily="@font/eb_garamond"
            android:gravity="center"
            android:onClick="abrirClaro"
            android:text="@string/btnClaro"
            android:textColor="#fff"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnTigo" />

        <TextView
            android:id="@+id/btnEnee"
            android:layout_width="320dp"
            android:layout_height="80dp"
            android:layout_marginTop="220dp"
            android:background="@drawable/botones"
            android:fontFamily="@font/eb_garamond"
            android:gravity="center"
            android:onClick="abrirEnee"
            android:text="@string/btnEnee"
            android:textColor="#fff"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imagenLogo"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/public_services_logo" />

        <TextView
            android:id="@+id/btnSanaa"
            android:layout_width="320dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/botones"
            android:fontFamily="@font/eb_garamond"
            android:gravity="center"
            android:onClick="abrirSanaa"
            android:text="@string/btnSanaa"
            android:textColor="#fff"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnEnee" />

        <TextView
            android:id="@+id/btnRetiro"
            android:layout_width="320dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/botones"
            android:fontFamily="@font/eb_garamond"
            android:gravity="center"
            android:onClick="abrirRetirar"
            android:text="@string/btnRetiro"
            android:textColor="#fff"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnClaro" />

</androidx.constraintlayout.widget.ConstraintLayout>